# entretien_python

./: README.md  pyproject.toml
entretien/code/: code_parsing.py  computing_operation.py
entretien/entretien_core/: computing_operation.py
tests/: test_computing_operation.py
