[project]
name = "entretien_python"  # Required
version = "3.8.0"  # Required
description = "A sample Python project"  # Optional
readme = "README.md" # Optional
requires-python = ">=3.7"

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [  # Optional
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Recruiters",
  "Topic :: Software Development :: Test skills",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "pytest"
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"